syntax = "proto3";

package proto.rl_ui_config;

message Config {
  string ip_address = 1;
  int32 port = 2;
  bool automatically_connect = 3;
}